hphp/test/zend/good/Zend/tests/ns_079.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_079.php on line 5
